configure basic swagger integrations
