# fiber-wallet/api/handlers/user_handler.go
@@ -6,6 +6,20 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
+// SearchUsers godoc
+// @Summary      Search users by email
+// @Description  Retrieves a list of users based on the email query parameter.
+//
+//	If the email query parameter is missing, a 400 Bad Request error is returned.
+//
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        email  query     string  true  "Email address of the user to search for"
+// @Failure      400    {object}  HTTPError  "Bad request, missing email query parameter"
+// @Failure      500    {object}  HTTPError  "Internal server error, failed to fetch users"
+// @Response     200
+// @Router       /users/search [get]
 func SearchUsers(service user.Service) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 
@@ -37,6 +51,17 @@ func SearchUsers(service user.Service) fiber.Handler {
 	}
 }
 
+// GetUserById godoc
+// @Summary      Get user by ID
+// @Description  Retrieves a user by their unique ID. If the user is not found, a 404 Not Found error is returned.
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int  true  "User ID"
+// @Failure      400  {object}  HTTPError  "Bad request, missing id path parameter"
+// @Failure      404  {object}  HTTPError  "User not found"
+// @Response     200
+// @Router       /users/{id} [get]
 func GetUserById(service user.Service) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		// Extract the user ID from the path parameter
@@ -81,12 +106,36 @@ func CreateUser(service user.Service) fiber.Handler {
 	}
 }
 
+// UpdateUser godoc
+// @Summary      Update user details
+// @Description  Updates the details of an existing user. This requires the user ID and the data to be updated.
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int    true  "User ID"
+// @Success      200
+// @Failure      400  {object}  HTTPError  "Invalid request, missing parameters"
+// @Failure      404  {object}  HTTPError  "User not found"
+// @Failure      500  {object}  HTTPError  "Internal server error"
+// @Router       /users/{id} [put]
 func UpdateUser(service user.Service) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		return c.SendString("update user")
 	}
 }
 
+// DeleteUser godoc
+// @Summary      Delete a user
+// @Description  Deletes an existing user based on the user ID provided in the path parameter.
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int    true  "User ID"
+// @Success      200  {string}  string "User successfully deleted"
+// @Failure      400  {object}  HTTPError  "Invalid request, missing parameters or deletion error"
+// @Failure      404  {object}  HTTPError  "User not found"
+// @Failure      500  {object}  HTTPError  "Internal server error"
+// @Router       /users/{id} [delete]
 func DeleteUser(service user.Service) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		id := c.Params("id")
@@ -102,4 +151,11 @@ func DeleteUser(service user.Service) fiber.Handler {
 
 		return c.Status(fiber.StatusOK).SendString("delete user")
 	}
+}
+
+// HTTPError represents a standard error response
+// @Description A standard error response structure
+type HTTPError struct {
+	Message string `json:"message"`
+	Code    int    `json:"code"`
 }
